Fix alignment of text and icons in the navbar
They were not centered vertically, no they are, thanks to the magic of flexbox.
CSS is a mess

--- a/src/main/resources/static/styles/products.css
+++ b/src/main/resources/static/styles/products.css
@@ -9,32 +9,25 @@ html, body
 
 #navBar
 {
-    width: 100%;
-    height: 5vh;
-    align-content: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 
-    overflow: hidden; /* Don't show items that don't fit in the navbar and show under/above it */
+    width: 100%;
+    height: 6vh;
 }
 
 #navBar a
 {
-    float: right;
-    text-align: center;
-    vertical-align: middle;
-    padding: 14px 16px;
-    text-decoration: none;
+    padding: 0 16px;
     font-size: 17px;
-}
-
-#navBar-left
-{
-    float: left;
 }
 
 #navBar .icon
 {
-    width: 2vh;
-    height: 2vh;
+    width: 4vh;
+    height: 4vh;
     vertical-align: middle;
 }
 
